2009-01-10	Jannis Pohlmann <jannis@xfce.org>

	* NEWS: Update NEWS for the upcoming 0.3.93 release.

2008-12-08	Nick Schermer <nick@xfce.org>

	* exo/exo-icon-view.c: Don't setup bindings for shift+n and shift+p
	  so type-ahead search works as expected. Bug #4633.

2008-12-08	Nick Schermer <nick@xfce.org>

	* Fix all compiler warnings and fix some possibly uninitialized variables.

2008-11-23	Jannis Pohlmann <jannis@xfce.org>

	* exo-helper/main.c: Oops, I actually broke the --launch parameter. Fixed.

2008-11-23	Jannis Pohlmann <jannis@xfce.org>

	* exo-helper/exo-preferred-applications.desktop.in: Remove GenericName and
	  the "Xfce 4" prefix from the Name field.
	* exo-helper/main.c: Change order of the command line parameters so 
	  that --launch is at the very bottom of the list (directly above the
	  launch type explanations.

2008-11-23	Jannis Pohlmann <jannis@xfce.org>

	* exo-helper/main.c (main): Stop startup notification once the plug is
	  created and the dialog content has been moved into the plug.

2008-11-22	Nick Schermer <nick@xfce.org>

	* exo-desktop-item-edit/main.c, exo-open/main.c, exo-mount/main.c
	  exo-csource/main.c, exo-mount-notify/main.c: Use -V for --version.
	* Manually update po files and regenerate them. 

2008-11-20	Jannis Pohlmann <jannis@xfce.org>

	* exo/exo-url.c (_exo_url_to_local_path, exo_url_show_on_screen): 
	  Modify _exo_url_to_local_path() so that it converts file:// URIs to
	  paths, does not touch absolute paths and converts relative paths to
	  absolute paths only if they exist in the local filesystem. Set 
	  relative paths to NULL otherwise. 
	  Replace the two regular expression for browser URIs by a more 
	  generic one and try to open URIs in the following order: file 
	  manager, email client and web browser as a last option.
	  Alltogether this should fix bug #4627.

2008-11-11	Jannis Pohlmann <jannis@xfce.org>

	* NEWS: Update NEWS file for the upcoming beta2 release.
