@@ -385,9 +385,18 @@ docs/manual/C/images/Makefile
 docs/manual/fr/Makefile
 docs/manual/fr/exo-preferred-applications.xml
 docs/manual/fr/images/Makefile
+docs/manual/id/Makefile
+docs/manual/id/exo-preferred-applications.xml
+docs/manual/id/images/Makefile
 docs/manual/ja/Makefile
 docs/manual/ja/exo-preferred-applications.xml
 docs/manual/ja/images/Makefile
+docs/manual/pt_BR/Makefile
+docs/manual/pt_BR/exo-preferred-applications.xml
+docs/manual/pt_BR/images/Makefile
+docs/manual/tr/Makefile
+docs/manual/tr/exo-preferred-applications.xml
+docs/manual/tr/images/Makefile
 docs/reference/Makefile
 docs/reference/version.xml
 exo.spec
