@@ -1,3 +1,7 @@
+2009-01-11	Jannis Pohlmann <jannis@xfce.org>
+
+	* configure.in.in: Add missing docs subdirectories.
+
 2009-01-10	Jannis Pohlmann <jannis@xfce.org>
 
 	* NEWS: Update NEWS for the upcoming 0.3.93 release.
